--- a/style/main.css
+++ b/style/main.css
@@ -84,6 +84,9 @@ body {
 .gmap_container td.isAlive {
     background: rgba(50,205,50,1);
 }
+.gmap_container td.isActive:not(.isAlive) {
+    background: black;
+}
 #form_links {
     padding-top: 20px;
 }
