--- a/style/scss/_form.scss
+++ b/style/scss/_form.scss
@@ -1,5 +1,5 @@
 $form_input_bg: white;
-$form_button_bg: white;
+$form_button_bg: #D3D3D3;
 $form_input_disabled_bg: white;
 $form_input_disabled_color: $font_color_disabled;
 
