--- a/style/main.css
+++ b/style/main.css
@@ -93,7 +93,7 @@ body {
   margin-top: 2px;
   margin-bottom: 2px;
   width: 90px;
-  background: white;
+  background: lightgrey;
   margin-top: 12px;
 }
 /* line 12, scss/_form.scss */
